UI fix alignement

--- a/WebContent/resources/css/hive.css
+++ b/WebContent/resources/css/hive.css
@@ -140,7 +140,6 @@ em, img, ins, kbd, q, s, samp, small, strike, strong, sub, sup, tt, var, b, u, i
   -moz-box-sizing: border-box;
   box-sizing: border-box;
 }
-html { overflow-y: scroll; }
 table { 
   line-height: 1;
   color: #585858;
